<resources>
    <string name="app_name">testInterface_TWO</string>
    <string name="title_activity_main_daigou">MainDaigouActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottombar">BottombarActivity</string>
    <string name="mail">信箱</string>
    <string name="password">密碼</string>
    <string name="login">登入</string>
    <string name="signup">註冊</string>
    <string name="forget_password">忘記密碼</string>
    <string name="phone">電話號碼</string>
    <string name="cancel">取消</string>
    <string name="name">名字</string>
    <string name="title_activity_bottom">bottomActivity</string>
    <string name="title_activity_shop">shopActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home">首頁</string>
    <string name="category">種類</string>
    <string name="person">個人</string>
    <string name="notify">通知</string>
    <string name="send">send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="medicine">藥品</string>
    <string name="bag">包包</string>
    <string name="shoes">鞋子</string>
    <string name="clothes">衣服</string>
    <string name="update">更新</string>
    <string name="your_name">名字</string>
    <string name="your_password">密碼</string>
    <string name="your_phone">電話</string>
    <string name="your_mail">信箱</string>
    <string name="setting">setting</string>
    <string name="reset_password">重設密碼</string>
    <string name="post_caption">貼文標題</string>
    <string name="button">Button</string>
    <string name="post_content">貼文內容</string>
    <string name="add_post">發文</string>
    <string name="username">userName</string>
    <string name="caption">標題</string>
    <string name="post">發文</string>
    <string name="content">內容</string>
    <string name="_0">0</string>
    <string name="logout">登出</string>
    <string name="comment">評論</string>
    <string name="write_your_comment">write your comment</string>
    <string name="Daigou">Daigou</string>
    <string name="Select_User">選擇使用者</string>
    <string name="message">訊息</string>
    <string name="say_something">say something</string>
    <string name="notifyMessage">notify Message</string>
    <string name="favorite">favorite</string>
    <string name="edit">編輯</string>
    <string name="delete">刪除</string>
    <string name="shopCart">商城</string>
    <string name="shopName">shopName</string>
    <string name="shopPrice">shopPrice</string>
    <string name="moneyMark">NT$</string>
    <string name="shopItemName">shopItemName</string>
    <string name="makeDate">製造日期：</string>
    <string name="size_all">尺寸皆有</string>
    <string name="say_your_problem">需要可聯繫</string>
    <string name="add_to_cart">加入購物車</string>
    <string name="shop">shop</string>
    <string name="itemCount">數量</string>
    <string name="itemPrice">價錢</string>
    <string name="itemThing">注意事項</string>
    <string name="online">上架</string>
    <string name="shopDate">shopDate</string>
    <string name="Nike_Air_Force">Nike Air Force</string>
    <string name="buy_deal">下單</string>
    <string name="pay">結帳</string>
    <string name="buyText">購買數量 :</string>
    <string name="payItem">payItem</string>
    <string name="buyTextMoney">總金額 :</string>
    <string name="BuyDate">購買日期 :</string>
    <string name="buy_nm">賣家 :</string>
    <string name="buyer">買家</string>
    <string name="seller">賣家</string>
    <string name="buyDate">buyDate</string>
    <string name="Address">地址</string>
    <string name="my">我的</string>
    <string name="myNotify">通知</string>
    <string name="talk">討論版</string>
    <string name="myItem">我的商場</string>
    <string name="myPost">我的貼文</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deal_process">訂單進度</string>
    <string name="post_favorite">貼文收藏</string>
    <string name="point_deal">代幣累積</string>
    <string name="my_comment">我的評價</string>
    <string name="my_deal">交易紀錄</string>
    <string name="my_setting">帳號設定</string>
    <string name="online_item">上架商品</string>
    <string name="progress">訂單進度</string>
    <string name="deal_progress_name">商品名</string>
    <string name="get_deal_item">已收到</string>
    <string name="date">日期</string>
    <string name="getting">出貨中...</string>
    <string name="finish_deal">交易紀錄</string>
    <string name="clear_finish">已收到</string>
    <string name="my_favorite_post">貼文收藏</string>
    <string name="deal_comment">交易評論</string>
    <string name="go_comment">去評論</string>
    <string name="deal_comment_text">對此次交易評論：</string>
    <string name="satisfaction">整體滿意度：</string>
    <string name="submit">提交</string>
    <string name="comment_deal_my_list">我的評價</string>
    <string name="my_deal_tab_buyer">買家交易紀錄</string>
    <string name="my_deal_tab_seller">賣家交易紀錄</string>
    <string name="check_shop">查看賣場</string>
    <string name="your_state">狀態</string>
    <string name="itemName">商品名稱</string>
    <string name="past_deal_comment">所有評價</string>
    <string name="online_date">上架日期</string>
    <string name="each_price">單價</string>
    <string name="each_count">數量</string>
    <string name="remark">備註</string>
    <string name="remark_item">顏色與尺寸</string>
    <string name="detail">訂單詳細資訊</string>
    <string name="itemPayDate">下單日期</string>
    <string name="itemReceiveDate">收到日期</string>
    <string name="itemIDInformation">訂單編號</string>
    <string name="itemBuyNumInformation">購買數量</string>
    <string name="itemBuyTotalInformation">商品價格</string>
    <string name="itemBuyAllInformation">合計價格</string>
    <string name="itemSellerInformation">賣家</string>
    <string name="itemSellerID">賣家編號</string>
    <string name="itemSellerName">賣家名字</string>
    <string name="itemSellerMail">賣家信箱</string>
    <string name="itemBuyerMail">買家信箱</string>
    <string name="itemBuyerName">買家名字</string>
    <string name="itemBuyerID">買家編號</string>
    <string name="itemBuyerInformation">買家</string>
    <string name="other">other</string>
    <string name="title">title</string>
    <string name="itemMind">備註</string>
    <string name="snack">零食</string>
    <string name="accessories">配件</string>
    <string name="dealCommentId">交易編號</string>
    <string name="comment_Text">留言</string>
    <string name="list">訂單清單</string>
    <string name="extract">已寄出</string>
    <string name="waiting">未處理</string>
    <string name="test">名</string>
    <string name="daigou_coin_deal">呆狗幣紀錄</string>
    <string name="get">獲得</string>
    <string name="spend">花費</string>
    <string name="my_past_deal_comment">商品評價</string>
    <string name="my_deal_comment">個人評價</string>
    <string name="want_item_name">商品名稱</string>
    <string name="want_item_num">購買數量</string>
    <string name="X">X</string>
    <string name="want_item_price">商品單價</string>
    <string name="want_item_all_price">總價</string>
    <string name="want_item_notice">備註</string>
    <string name="want_item_address">地址</string>
    <string name="buy_Date">下單日期</string>
    <string name="exchange">代幣兌換</string>
    <string name="change">兌換</string>
    <string name="eth">$0.0005eth</string>
    <string name="two_eth">$0.0010eth</string>
    <string name="three_eth">$0.0015eth</string>
    <string name="four_eth">$0.0020eth</string>
    <string name="five_eth">$0.0025eth</string>
    <string name="six_eth">$0.0030eth</string>
    <string name="seven_eth">$0.0035eth</string>
    <string name="eight_eth">$0.0040eth</string>
    <string name="person_comment">買家評論</string>
    <string name="ing">處理中</string>
    <string name="one_price">單價</string>
    <string name="count">數量</string>
    <string name="notice">備註</string>
    <string name="each_notice">備註</string>
    <string name="NT10">10</string>
    <string name="Nt20">20</string>
    <string name="Nt30">30</string>
    <string name="NT40">40</string>
    <string name="NT50">50</string>
    <string name="NT60">60</string>
    <string name="NT70">70</string>
    <string name="NT80">80</string>
    <string name="myProfile">我的個人檔案</string>
    <string name="save">儲存</string>
    <string name="wallet">錢包</string>
    <string name="my_dog_coin">我的呆狗幣</string>
    <string name="convert_eth">兌換以太幣</string>
    <string name="dog_coin">呆狗幣</string>
    <string name="getRecord">獲得紀錄</string>
    <string name="spendRecord">花費紀錄</string>
    <string name="dealCoinId">訂單編號</string>
    <string name="itemBlockAddress">區塊鏈合約地址</string>
    <string name="deal_spend">兌換以太幣</string>
    <string name="myPostEdit">編輯貼文</string>
    <string name="titlePost">標題</string>
    <string name="contentPost">內容</string>
</resources>