<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".DealActivity">

    <ImageView
        android:id="@+id/payItemImage"
        android:layout_width="152dp"
        android:layout_height="133dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/test" />

    <TextView
        android:id="@+id/payItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/payItem"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/payItemImage"
        app:layout_constraintTop_toTopOf="@+id/payItemImage" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="22dp"
        android:text="@string/buyText"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/payItemImage"
        app:layout_constraintTop_toBottomOf="@id/payItemName" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="22dp"
        android:text="@string/buyTextMoney"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/payItemImage"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/payItemTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/_0"
        android:textColor="@color/second_Text"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/payItemCount"
        android:layout_width="10dp"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:text="@string/_0"
        android:textColor="@color/second_Text"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/payItemName"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/buyItemSellerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/buy_nm"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payItemImage" />

    <TextView
        android:id="@+id/buyItemDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/BuyDate"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buyItemSellerText" />

    <Button
        android:id="@+id/payButton"
        android:layout_width="96dp"
        android:layout_height="55dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/BuyRed"
        android:text="@string/pay"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toEndOf="@+id/cancelButton"
        app:layout_constraintTop_toTopOf="@+id/cancelButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="96dp"
        android:layout_height="55dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/cancelGray"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sellerItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/seller"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/cancelGray"
        app:layout_constraintBottom_toBottomOf="@+id/buyItemSellerText"
        app:layout_constraintStart_toEndOf="@+id/buyItemSellerText"
        app:layout_constraintTop_toTopOf="@+id/buyItemSellerText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/buyItemDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/buyDate"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/cancelGray"
        app:layout_constraintBottom_toBottomOf="@+id/buyItemDateText"
        app:layout_constraintStart_toEndOf="@+id/buyItemDateText"
        app:layout_constraintTop_toTopOf="@+id/buyItemDateText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/Address"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buyItemDateText" />

    <EditText
        android:id="@+id/editAddressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="地址"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buyItemDate"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/remarkTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:text="@string/remark"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/remarkEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/remark_item"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/remarkTextView"
        app:layout_constraintTop_toBottomOf="@+id/editAddressText" />

</androidx.constraintlayout.widget.ConstraintLayout>